force-app/main/default/objects/Case_Escalation_Log__c/Case_Escalation_Log__c.object-meta.xml
<CustomObject>
    <description>This Custom Object stores the logs of the Cases that are closed and escalated</description>
    <label>Case Escalation Log</label>
    <nameField>
        <displayFormat>CEL-{0000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Escalation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>