force-app/main/default/objects/Case_Escalation_Log__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <description>This Custom field tells whether the case is assigned to a User or Queue</description>
    <label>Assign To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>