force-app/main/default/objects/Case_Escalation_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Escalation Logs</relationshipLabel>
    <relationshipName>Case_Escalation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>