force-app/main/default/objects/Case_Escalation_Log__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>This show the case number</description>
    <label>Case Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>