force-app/main/default/objects/Case_Escalation_Log__c/fields/Case_Status_at_Time_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_at_Time_of_Action__c</fullName>
    <description>Stores the status of the case right before it was closed (e.g., &apos;Working&apos;). This is useful for reporting</description>
    <label>Case Status at Time of Action</label>
    <length>18</length>
    <type>Text</type>
</CustomField>