force-app/main/default/objects/Case_Escalation_Log__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>This show the comment of the case</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>