force-app/main/default/objects/Case_Escalation_Log__c/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>This shows the date and time of the case, and who is escalated or closed</description>
    <label>Time Stamp</label>
    <type>DateTime</type>
</CustomField>