force-app/main/default/objects/Case_Escalation_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures who owned the case at the moment the action was taken, providing a snapshot of responsibility.</description>
    <inlineHelpText>Captures who owned the case at the moment the action was taken, providing a snapshot of responsibility.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Escalation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>